src/test/ui/issues/issue-15524.stderr
error[E0081]: discriminant value `1` assigned more than once
  --> $DIR/issue-15524.rs:3:1
   |
LL | / enum Foo {
LL | |
LL | |
LL | |
LL | |     A = 1,
   | |         - first assignment of `1`
LL | |     B = 1,
   | |         - second assignment of `1`
...  |
LL | |
LL | | }
   | |_^

error[E0081]: discriminant value `1` assigned more than once
  --> $DIR/issue-15524.rs:3:1
   |
LL | / enum Foo {
LL | |
LL | |
LL | |
LL | |     A = 1,
   | |         - first assignment of `1`
LL | |     B = 1,
LL | |     C = 0,
   | |     ----- assigned discriminant for `D` was incremented from this discriminant
LL | |     D,
   | |     - second assignment of `1`
...  |
LL | |
LL | | }
   | |_^

error[E0081]: discriminant value `1` assigned more than once
  --> $DIR/issue-15524.rs:3:1
   |
LL | / enum Foo {
LL | |
LL | |
LL | |
LL | |     A = 1,
   | |         - first assignment of `1`
...  |
LL | |     E = N,
   | |         - second assignment of `1`
LL | |
LL | | }
   | |_^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0081`.
